tests/ui/receiverless_self_return.stderr
error: no rules expected `)`
 --> tests/ui/receiverless_self_return.rs:3:39
  |
  3 | dyn_shim! { trait D for Src { fn make() -> Self; } }
    |                                       ^ no rules expected this token in macro call
    |
note: while trying to match `&`
   --> src/lib.rs
    |
    |             (&self $(, $arg:ident : $ty:ty)*) $(-> $ret:ty)? $([where $($w:tt)+])? ;
    |              ^

error: no rules expected `)`
 --> tests/ui/receiverless_self_return.rs:3:39
  |
  3 | dyn_shim! { trait D for Src { fn make() -> Self; } }
    |                                       ^ no rules expected this token in macro call
    |
note: while trying to match `&`
   --> src/lib.rs
    |
    |             (&self $(, $arg:ident : $ty:ty)*) $(-> $ret:ty)? $([where $($w:tt)+])? ;
    |              ^
